// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`charater class it should create a character well initialized 1`] = `
<div
  class="test-stand"
/>
`;

exports[`charater class it should create a character well initialized 2`] = `
Object {
  "items": Array [],
  "position": NaN,
  "side": "right",
  "state": "stand",
}
`;

exports[`charater class should test the KeyboardEvent keydown 1`] = `
Object {
  "items": Array [],
  "position": NaN,
  "side": "right",
  "state": "down",
}
`;

exports[`charater class should test the KeyboardEvent keydown 2`] = `
Object {
  "items": Array [],
  "position": NaN,
  "side": "right",
  "state": "run",
}
`;

exports[`charater class should test the KeyboardEvent keydown 3`] = `
Object {
  "items": Array [],
  "position": NaN,
  "side": "left",
  "state": "run",
}
`;

exports[`charater class should test the KeyboardEvent keydown 4`] = `
Object {
  "items": Array [],
  "position": NaN,
  "side": "left",
  "state": "jump",
}
`;

exports[`charater class should test the KeyboardEvent keydown 5`] = `
Object {
  "items": Array [
    Object {
      "element": <div
        class="kunai left"
        style="position: absolute;"
      />,
      "id": 1644182219303,
      "position": NaN,
    },
  ],
  "position": NaN,
  "side": "left",
  "state": "throw",
}
`;

exports[`charater class should test the KeyboardEvent keydown 6`] = `
Object {
  "items": Array [
    Object {
      "element": <div
        class="kunai left"
        style="position: absolute;"
      />,
      "id": 1644182219303,
      "position": NaN,
    },
    Object {
      "element": <div
        class="shuriken left"
        style="position: absolute;"
      />,
      "id": 1644182219303,
      "position": NaN,
    },
  ],
  "position": NaN,
  "side": "left",
  "state": "throw",
}
`;

exports[`charater class should test the KeyboardEvent keyup 1`] = `
Object {
  "items": Array [
    Object {
      "element": <div
        class="kunai left"
        style="position: absolute;"
      />,
      "id": 1644182219303,
      "position": NaN,
    },
    Object {
      "element": <div
        class="shuriken left"
        style="position: absolute;"
      />,
      "id": 1644182219303,
      "position": NaN,
    },
  ],
  "position": NaN,
  "side": "left",
  "state": "stand",
}
`;

exports[`charater class should test the KeyboardEvent keyup 2`] = `
Object {
  "items": Array [
    Object {
      "element": <div
        class="kunai left"
        style="position: absolute;"
      />,
      "id": 1644182219303,
      "position": NaN,
    },
    Object {
      "element": <div
        class="shuriken left"
        style="position: absolute;"
      />,
      "id": 1644182219303,
      "position": NaN,
    },
  ],
  "position": NaN,
  "side": "left",
  "state": "stand",
}
`;

exports[`charater class should test the KeyboardEvent keyup 3`] = `
Object {
  "items": Array [
    Object {
      "element": <div
        class="kunai left"
        style="position: absolute;"
      />,
      "id": 1644182219303,
      "position": NaN,
    },
    Object {
      "element": <div
        class="shuriken left"
        style="position: absolute;"
      />,
      "id": 1644182219303,
      "position": NaN,
    },
  ],
  "position": NaN,
  "side": "left",
  "state": "stand",
}
`;
